[package]
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
name = "poise"
version = "0.2.1"
description = "A Discord bot framework for serenity"
license = "MIT"
repository = "https://github.com/kangalioo/poise/"

[dependencies]
tokio = { version = "1.4.0", default-features = false } # for async in general
futures-core = { version = "0.3.13", default-features = false } # for async in general
futures-util = { version = "0.3.13", default-features = false } # for async in general
once_cell = { version = "1.7.2", default-features = false, features = ["std"] } # to store and set user data
poise_macros = { path = "macros", version = "0.2.1" } # remember to update the version on changes!
async-trait = { version = "0.1.48", default-features = false } # various traits
regex = { version = "1.5.4", default-features = false, features = ["std"] } # prefix
log = { version = "0.4.14", default-features = false } # warning about weird state
derivative = "2.2.0"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]

version = "0.11.2"

git = "https://github.com/nickelc/serenity"
# branch = "staging/poise-next"
rev = "2786d0371d861ab102ef89b29416f6ac9799dcd3"

# git = "https://github.com/serenity-rs/serenity"
# rev = "2bb9a01bfccd0485ccb7e9f20cce8edff7426eb3"

# git = "https://github.com/kangalioo/serenity"
# branch = "poise-tailored"

# path = "../_downloaded/serenity"

[dev-dependencies]
# For the examples
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }
futures = { version = "0.3.13", default-features = false }
env_logger = "0.9.0"

[features]
default = ["serenity/rustls_backend", "cache", "chrono"]
chrono = ["serenity/chrono"]
cache = ["serenity/cache"]
time = ["serenity/time"]
# No-op feature because serenity/collector is now enabled by default
collector = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_nightly"]
