[package]
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
name = "poise"
version = "0.3.0"
description = "A Discord bot framework for serenity"
license = "MIT"
repository = "https://github.com/kangalioo/poise/"

[dependencies]
tokio = { version = "1.4.0", default-features = false } # for async in general
futures-core = { version = "0.3.13", default-features = false } # for async in general
futures-util = { version = "0.3.13", default-features = false } # for async in general
once_cell = { version = "1.7.2", default-features = false, features = ["std"] } # to store and set user data
poise_macros = { path = "macros", version = "0.3.0" } # remember to update the version on changes!
async-trait = { version = "0.1.48", default-features = false } # various traits
regex = { version = "1.5.4", default-features = false, features = ["std"] } # prefix
log = { version = "0.4.14", default-features = false } # warning about weird state
derivative = "2.2.0"
parking_lot = "0.12.1"
poise_utils = { path = "utils", features = ["full_serenity"] }
poise_slash_argument = { path = "slash_argument" }

[dependencies.serenity]
default-features = false

# version = "0.11.4"

git = "https://github.com/serenity-rs/serenity"
branch = "next"

# path = "../_downloaded/serenity"

[dev-dependencies]
# For the examples
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }
futures = { version = "0.3.13", default-features = false }
env_logger = "0.9.0"
fluent = "0.16.0"
intl-memoizer = "0.5.1"
fluent-syntax = "0.11"

[features]
default = ["serenity/rustls_backend", "cache", "chrono"]
chrono = ["poise_utils/chrono"]
cache = ["poise_utils/cache"]
time = ["poise_utils/time"]
# No-op feature because serenity/collector is now enabled by default
collector = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_nightly"]
