[package]
name = "poise_macros"
version = "0.5.0" # remember to update the version
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
description = "Internal macro implementation crate of poise"
license = "MIT"
repository = "https://github.com/kangalioo/poise/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["full", "fold"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
darling = "0.14.1"
