[package]
name = "poise_macros"
version = "0.5.6" # remember to update the version
authors = ["kangalio <jannik.a.schaper@web.de>"]
edition = "2018"
description = "Internal macro implementation crate of poise"
license = "MIT"
repository = "https://github.com/serenity-rs/poise/"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[dependencies]
syn = { version = "1.0.64", features = ["full", "fold"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
darling = "0.14.1"

[dev-dependencies]
trybuild = { version = "1.0.85", features = ["diff"] }
poise = { path = ".." }
