[package]
name = "poise_macros"
version = "0.6.1" # remember to update the version
authors = ["kangalio <jannik.a.schaper@web.de>"]
edition = "2018"
description = "Internal macro implementation crate of poise"
license = "MIT"
repository = "https://github.com/serenity-rs/poise/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["fold"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
darling = "0.20"

[features]
unstable = []
