[package]
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
name = "poise_slash_argument"
version = "0.3.0"

[dependencies]
poise_utils = { path = "../utils" }
async-trait = { version = "0.1.48", default-features = false } # SlashArgument trait
futures-util = { version = "0.3.13", default-features = false } # for async in general
