[package]
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
name = "poise_utils"
version = "0.3.0"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector"]

# version = "0.11.4"

git = "https://github.com/serenity-rs/serenity"
branch = "next"

# git = "https://github.com/serenity-rs/serenity"
# rev = "2bb9a01bfccd0485ccb7e9f20cce8edff7426eb3"

# git = "https://github.com/kangalioo/serenity"
# branch = "autocomplete-choice-constructable"

# path = "../_downloaded/serenity"

[features]
rustls_backend = ["serenity/rustls_backend"]
chrono = ["serenity/chrono"]
cache = ["serenity/cache"]
time = ["serenity/time"]
