[package]
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
name = "poise_utils"
version = "0.3.0"

[dependencies.serenity]
default-features = false
features = ["builder", "utils", "http"]

# version = "0.11.4"

git = "https://github.com/serenity-rs/serenity"
branch = "next"

# path = "../../_downloaded/serenity"

[features]
rustls_backend = ["serenity/rustls_backend"]
chrono = ["serenity/chrono"]
cache = ["serenity/cache"]
time = ["serenity/time"]
full_serenity = ["serenity/client", "serenity/gateway", "serenity/collector", "serenity/model"]
